Footer add and about changes

--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,11 @@ img {
     margin-right: auto;
     width: 100%;
 }
+
+footer {
+    margin-left: 15%;
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    width: 85%;
+}
